--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </header>
 
 <!-- Buttons to show more info -->
-<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
-<button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
-<button class="button" onclick="toggleInfo('education-details')">Education Details</button>
+<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button><br>
+<button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button><br>
+<button class="button" onclick="toggleInfo('education-details')">Education Details</button><br>
 
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
