--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </header>
 
 <!-- Buttons to show more info -->
-<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button><br>
+<br><button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button><br>
 <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button><br>
 <button class="button" onclick="toggleInfo('education-details')">Education Details</button><br>
 
