--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <!-- Buttons to show more info -->
 <br><button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button><br>
 <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button><br>
-<button class="button" onclick="toggleInfo('education-details')">Education Details</button><br>
 
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
@@ -76,8 +75,8 @@
     </table>
 </section>
 
-<!-- Education Details Section -->
-<section id="education-details" style="display:none;">
+<!-- Education Details Section (Always Visible) -->
+<section id="education-details">
     <h2>Education Details</h2>
     <dl>
         <dt><strong>Class:</strong></dt>
