--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     <h2>Education Details</h2>
     <dl>
         <dt><strong>Class:</strong></dt>
-        <dd>[Class Information]</dd>
+        <dd>D Division</dd>
         <dt><strong>Subject:</strong></dt>
-        <dd>[Subject Information]</dd>
+        <dd>Design and anylasis of Algorithm</dd>
         <dt><strong>Mentor:</strong></dt>
-        <dd>[Mentor Name]</dd>
+        <dd>Arundati Mam</dd>
     </dl>
 </section>
 
@@ -110,8 +110,8 @@
 <section>
     <h2>Team Members</h2>
     <ul>
-        <li>[Team Member Name 1]</li>
-        <li>[Team Member Name 2]</li>
+        <li>Rio Javalagi</li>
+        <li>Sanjana Shetti</li>
         <li>[Team Member Name 3]</li>
         <li>[Team Member Name 4]</li>
         <!-- Add more team members if required -->
