--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 [City Name] | Designed by Students of [Institution Name]</p>
+    <p>&copy; 2024 [City Name] | Designed by RIA JAVALAGI</p>
 </footer>
 
 </body>
