--- a/index.html
+++ b/index.html
@@ -138,26 +138,80 @@
 <br>(iv) Nali - Kali (Joyous Learning) Programme: For elementary schools, where children learn through playful activities will undergo a redesign after authorities realized children are not picking up the habit of writing, which seems to be affecting learning outcomes.
        <h2> Budget </h2>
         <p>City Layout Plan<br>
-      Total Area: 1500 sq. km
-  Zones: 5 primary zones
-1. Residential Zone
-  Population: 1 million
-  Housing Density: 1000-2000 people per sq. km
-2. Commercial and Business Zone
-  Area: 225 sq. km
- Businesses: IT parks, R&D centers, co-working spaces
-  Target Industries: IT services, manufacturing, eco-friendly product production
-3. Education and Healthcare Zone
- Area: 45 square kms
- Education: Schools, universities, and research centers
-  Healthcare: 3 multi-specialty hospitals, 10 clinics
-4. Industrial Zone
-  Area: 300 square kms
- Focus: Renewable energy, electric vehicles
-5. Recreation and Cultural Zone
-  Area: 50 square kms
- Facilities: Museums, Monuments, and Folk centers
-      
+     <br> Total Area: 1500 sq. km
+  <br>Zones: 5 primary zones
+<br>1. Residential Zone
+ <br> Population: 1 million
+ <br> Housing Density: 1000-2000 people per sq. km
+<br>2. Commercial and Business Zone
+ <br> Area: 225 sq. km
+<br> Businesses: IT parks, R&D centers, co-working spaces
+ <br> Target Industries: IT services, manufacturing, eco-friendly product production
+<br>3. Education and Healthcare Zone
+<br> Area: 45 square kms
+<br> Education: Schools, universities, and research centers
+<br>  Healthcare: 3 multi-specialty hospitals, 10 clinics
+<br>4. Industrial Zone
+<br>  Area: 300 square kms
+<br> Focus: Renewable energy, electric vehicles
+<br>5. Recreation and Cultural Zone
+<br>  Area: 50 square kms
+<br> Facilities: Museums, Monuments, and Folk centers
+  <h2>Revenue Generation </h2>   
+<p><br>  Property taxes and development fees: ₹3000 crores annually (based on high-income real estate projects)
+  <br> Tourism Revenue: ₹1000 crores annually (cultural tourism focused on temples and eco-parks)
+  <br> Commercial leasing: ₹3500 crores annually (leasing to tech companies in CBD and IT parks)
+  <br> Public Transport and utility services: ₹1500 crores annually
+  <br> Export of surplus Renewable Energy: ₹1200 crores annually (solar and wind farms)
+ <br>6. Sustainability and Smart elements
+  <br> Renewable Energy: 10% of the city's energy needs will be met through solar and wind power.
+  <br> Green Buildings: All buildings will be designed and constructed with green building materials and energy-efficient systems.
+  <br> Green spaces: The city will have a significant amount of green spaces to improve air quality and biodiversity.
+  <br> Smart Transportation: Integrated public transport system, smart traffic management, and cycling infrastructure.
+  <br> Smart Waste Management: Waste segregation, recycling, and composting facilities.
+  <br> Smart Governance: E-governance services, citizen engagement platforms, and data-driven decision-making.
+  <br> Efficient Public Transport: Prioritizing electric buses and metros, reducing congestion and pollution.
+  <br> Digital Infrastructure: City-wide Wifi, e-governance apps, digital ID integration, and smart surveillance.
+  <br> Data-driven Management: Sensors for pollution control, real-time traffic management, and waste collection systems. Central command center for monitoring city services.
+  <br> Women's Help Center: Using technology to provide women with support for jobs, safety, health, and education, helping them become more independent and secure.
+  <br> Polo Xies: High-street shopping and leisure destination offering a mix of retail outlets, dining options, and cultural experiences in a lively, pedestrian-friendly environment. 
+    <h2>Revenue Generation </h2>   
+<p><br> i. Floral Waste Management:
+  <br> Gundlupet is known as the "Flower Pot of India"
+ <br>Project focuses on recycling floral waste into eco-friendly products like incense, bio-leather, and compost.
+ <br> Promotes sustainability and reduces environmental pollution.
+<br>ii. Bird Sanctuary:
+ <br> Area: 50 hectares
+ <br> Species Protected: 200 bird species
+ <br> Annual Visitors: 3,00,000
+<br>iii. Smart Waste Management and Collection:
+ <br> Waste Trucks: 100 smart trucks with GPS tracking
+ <br> Waste Bins: 5,000 smart bins with sensors for real-time collection.
+ <br> Waste Segregation: Target 90% of all household waste by 2030.
+<br>iv. Solid Waste Management (Door-to-Door Collection):
+ <br> Waste Collected Daily: 850 tons/day
+ <br> Coverage: 100% of households
+ <br> Recycling Centers: 10 major centers
+<br>v. Water Treatment Plants:
+ <br> Capacity: 500 million liters/day
+ <br> Coverage: 100% of the city
+ <br> Water recycling and reuse for the city
+ <br> Storm water reuse: 20% of treated water
+<br>vi. Rainwater Harvesting and Wastewater Recycling:
+ <br> Rainwater Harvesting: 100,000 residential and commercial buildings
+ <br> Capacity: 300 million liters/day of water
+ <br> Reused for irrigation: 70% in parks and landscaping.
+<br>vii. No Engine Zone:
+ <br> Area: 20 kms
+ <br> Can be used by cyclists, pedestrians, and cart owners (horse, bullock cart, etc.)
+ <br> Improves air quality and reduces noise pollution.
+<br>viii. Solar Power Usage:
+ <br> 50,000 Rooftop solar panels, lowering the energy level (bills)
+ <br> 20 Traffic signals reducing dependence on electricity (pedestrian control signals)
+ <br> 10 Solar pumps which can be used for agricultural irrigation, reduces the need for fuel-powered water pumps.
+<br>ix. Waste production and consumption
+ <br> Post production 4 tons/day used for landscaping, agriculture
+
 </section>
     
 
