--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 <!-- Updated City Plan Section -->
 <section id="city-plan">
     <h2>About VAYUJIVA</h2>
-    <p>[Brief description of the city vision, purpose, and key features].</p>
+    <p>Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
+</p>
     
     <h2>Location And population </h2>
     <p> <br>State: Karnataka
