--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
 <!-- Updated City Plan Section -->
 <section id="city-plan">
-    <h2>About VAYUJIVA</h2>
+    <h1>About VAYUJIVA</h1>
     <p>Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
 </p>
     
     <h2>Location And population </h2>
-    <p> <br>State: Karnataka
+    <p> State: Karnataka
  <br>District: Chamrajnagar
  <br>Taluk: Gundlupet
  <br>Area: 15.60 sq km
@@ -109,7 +109,7 @@
  <br>Phase 2 (2030-2035): 600000 residents (Expansion of residential zones)
  <br>Phase 3 (2035-2040): 1 million residents (Target population)<br>
         <h2> Budget </h2>
-        <p><br>Phase 1 (2025-2030)
+        <p>Phase 1 (2025-2030)
 <br> 1.Infrastructure Development: ₹10,000 crores (roads, utilities, public transportation)
 <br> 2.Public Transportation: ₹6,000 crores (Metro, EV buses)
  <br>3.Affordable Housing: ₹5,000 crores (50,000 units for lower-income groups)
@@ -133,7 +133,7 @@
 <br> 4.Urban Development of Green Spaces:₹1,000 crores
 <br> 5.Public Health and Education Services Expansion: ₹3,000 crores <br>
       <h2>Government Initiatives </h2>   
-<p><br>(i) Smart Cities Mission: For digital infrastructure, e-governance and city surveillance, receiving approximately ₹3000 crores in grants.
+<p>(i) Smart Cities Mission: For digital infrastructure, e-governance and city surveillance, receiving approximately ₹3000 crores in grants.
 <br>(ii) Beti Bachao Beti Padhao: Scheme to promote the birth of girl children in below poverty line (BPL) families and to raise the status of the girl child in the family and society. Child gets health insurance cover up to a maximum of ₹25,000 a year and an annual scholarship of ₹500 to ₹1000 upto tenth standard.
 <br>(iii) National Solar Mission: Targeting renewable energy production, funds amounting to ₹1000 crores will be received to develop solar farms and support sustainable energy.
 <br>(iv) Nali - Kali (Joyous Learning) Programme: For elementary schools, where children learn through playful activities will undergo a redesign after authorities realized children are not picking up the habit of writing, which seems to be affecting learning outcomes.
@@ -159,7 +159,7 @@
 <br>  Area: 50 square kms
 <br> Facilities: Museums, Monuments, and Folk centers
   <h2>Revenue Generation </h2>   
-<p><br>  Property taxes and development fees: ₹3000 crores annually (based on high-income real estate projects)
+<p> Property taxes and development fees: ₹3000 crores annually (based on high-income real estate projects)
   <br> Tourism Revenue: ₹1000 crores annually (cultural tourism focused on temples and eco-parks)
   <br> Commercial leasing: ₹3500 crores annually (leasing to tech companies in CBD and IT parks)
   <br> Public Transport and utility services: ₹1500 crores annually
@@ -177,7 +177,7 @@
   <br> Women's Help Center: Using technology to provide women with support for jobs, safety, health, and education, helping them become more independent and secure.
   <br> Polo Xies: High-street shopping and leisure destination offering a mix of retail outlets, dining options, and cultural experiences in a lively, pedestrian-friendly environment. 
     <h2>Revenue Generation </h2>   
-<p><br> i. Floral Waste Management:
+<p> i. Floral Waste Management:
   <br> Gundlupet is known as the "Flower Pot of India"
  <br>Project focuses on recycling floral waste into eco-friendly products like incense, bio-leather, and compost.
  <br> Promotes sustainability and reduces environmental pollution.
