--- a/index.html
+++ b/index.html
@@ -88,132 +88,106 @@
     </dl>
 </section>
 
-<!-- Updated City Plan Section -->
+
 <section id="city-plan">
     <h1>About VAYUJIVA</h1>
-    <p>Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
-</p>
-    
-    <h2>Location And population </h2>
-    <p> State: Karnataka
- <br>District: Chamrajnagar
- <br>Taluk: Gundlupet
- <br>Area: 15.60 sq km
- <br>Scale: 1 cm on chart = 2km (x=1.2cm, y=1.4cm)
- <br>PIN Code: 571419
- <br>STD Code: 0822
- <br>Time Zone: IST (Indian Standard Time) UTC+5:30
- <br>Nearby Cities: Gundlupet (47km), Kollegal (112km), Chamrajnagar (134km)
- <br> Population:
- <br>Phase 1 (2025-2030): 300000 residents (Primarily government and industrial workers)
- <br>Phase 2 (2030-2035): 600000 residents (Expansion of residential zones)
- <br>Phase 3 (2035-2040): 1 million residents (Target population)<br>
-        <h2> Budget </h2>
-        <p>Phase 1 (2025-2030)
-<br> 1.Infrastructure Development: ₹10,000 crores (roads, utilities, public transportation)
-<br> 2.Public Transportation: ₹6,000 crores (Metro, EV buses)
- <br>3.Affordable Housing: ₹5,000 crores (50,000 units for lower-income groups)
-<br> 4.Smart Technology Implementation: ₹5,000 crores (IoT, AI for governance)
-<br> 5.Green Energy and Water Conservation: ₹3,000 crores
-<br> 6.Government Services and Administration: ₹2,000 crores
-<br> 7.Education and Healthcare Initiatives: ₹3,000 crores
-<br>Phase 2 (2030-2035)
- <br>1.Growth and Expansion: ₹10,000 crores
- <br>2.Expansion of Transport: ₹8,000 crores (Metro extensions)
- <br>3.Residential Expansion: ₹5,000 crores
- <br>4.Green Energy Development: ₹7,000 crores (wind and solar farms)
-<br> 5.Commercial & Industrial Zone Development: ₹5,000 crores
-<br> 6.Tourism & Cultural Infrastructure Development: ₹4,000 crores
-<br> 7.Smart Public Services Integration: ₹2,000 crores
-<br> 8.Eco-friendly Waste Management: ₹1,000 crores
-<br>Phase 3 (2035-2040)
-<br> 1.Mature Phase: ₹18,000 crores
-<br> 2.Upgradation of Public Infrastructure: ₹8,000 crores
- <br>3.Sustainable Water System: ₹4,000 crores
-<br> 4.Urban Development of Green Spaces:₹1,000 crores
-<br> 5.Public Health and Education Services Expansion: ₹3,000 crores <br>
-      <h2>Government Initiatives </h2>   
-<p>(i) Smart Cities Mission: For digital infrastructure, e-governance and city surveillance, receiving approximately ₹3000 crores in grants.
-<br>(ii) Beti Bachao Beti Padhao: Scheme to promote the birth of girl children in below poverty line (BPL) families and to raise the status of the girl child in the family and society. Child gets health insurance cover up to a maximum of ₹25,000 a year and an annual scholarship of ₹500 to ₹1000 upto tenth standard.
-<br>(iii) National Solar Mission: Targeting renewable energy production, funds amounting to ₹1000 crores will be received to develop solar farms and support sustainable energy.
-<br>(iv) Nali - Kali (Joyous Learning) Programme: For elementary schools, where children learn through playful activities will undergo a redesign after authorities realized children are not picking up the habit of writing, which seems to be affecting learning outcomes.
-       <h2> Budget </h2>
-        <p>City Layout Plan<br>
-     <br> Total Area: 1500 sq. km
-  <br>Zones: 5 primary zones
-<br>1. Residential Zone
- <br> Population: 1 million
- <br> Housing Density: 1000-2000 people per sq. km
-<br>2. Commercial and Business Zone
- <br> Area: 225 sq. km
-<br> Businesses: IT parks, R&D centers, co-working spaces
- <br> Target Industries: IT services, manufacturing, eco-friendly product production
-<br>3. Education and Healthcare Zone
-<br> Area: 45 square kms
-<br> Education: Schools, universities, and research centers
-<br>  Healthcare: 3 multi-specialty hospitals, 10 clinics
-<br>4. Industrial Zone
-<br>  Area: 300 square kms
-<br> Focus: Renewable energy, electric vehicles
-<br>5. Recreation and Cultural Zone
-<br>  Area: 50 square kms
-<br> Facilities: Museums, Monuments, and Folk centers
-  <h2>Revenue Generation </h2>   
-<p> Property taxes and development fees: ₹3000 crores annually (based on high-income real estate projects)
-  <br> Tourism Revenue: ₹1000 crores annually (cultural tourism focused on temples and eco-parks)
-  <br> Commercial leasing: ₹3500 crores annually (leasing to tech companies in CBD and IT parks)
-  <br> Public Transport and utility services: ₹1500 crores annually
-  <br> Export of surplus Renewable Energy: ₹1200 crores annually (solar and wind farms)
- <br>6. Sustainability and Smart elements
-  <br> Renewable Energy: 10% of the city's energy needs will be met through solar and wind power.
-  <br> Green Buildings: All buildings will be designed and constructed with green building materials and energy-efficient systems.
-  <br> Green spaces: The city will have a significant amount of green spaces to improve air quality and biodiversity.
-  <br> Smart Transportation: Integrated public transport system, smart traffic management, and cycling infrastructure.
-  <br> Smart Waste Management: Waste segregation, recycling, and composting facilities.
-  <br> Smart Governance: E-governance services, citizen engagement platforms, and data-driven decision-making.
-  <br> Efficient Public Transport: Prioritizing electric buses and metros, reducing congestion and pollution.
-  <br> Digital Infrastructure: City-wide Wifi, e-governance apps, digital ID integration, and smart surveillance.
-  <br> Data-driven Management: Sensors for pollution control, real-time traffic management, and waste collection systems. Central command center for monitoring city services.
-  <br> Women's Help Center: Using technology to provide women with support for jobs, safety, health, and education, helping them become more independent and secure.
-  <br> Polo Xies: High-street shopping and leisure destination offering a mix of retail outlets, dining options, and cultural experiences in a lively, pedestrian-friendly environment. 
-    <h2>Revenue Generation </h2>   
-<p> i. Floral Waste Management:
-  <br> Gundlupet is known as the "Flower Pot of India"
- <br>Project focuses on recycling floral waste into eco-friendly products like incense, bio-leather, and compost.
- <br> Promotes sustainability and reduces environmental pollution.
-<br>ii. Bird Sanctuary:
- <br> Area: 50 hectares
- <br> Species Protected: 200 bird species
- <br> Annual Visitors: 3,00,000
-<br>iii. Smart Waste Management and Collection:
- <br> Waste Trucks: 100 smart trucks with GPS tracking
- <br> Waste Bins: 5,000 smart bins with sensors for real-time collection.
- <br> Waste Segregation: Target 90% of all household waste by 2030.
-<br>iv. Solid Waste Management (Door-to-Door Collection):
- <br> Waste Collected Daily: 850 tons/day
- <br> Coverage: 100% of households
- <br> Recycling Centers: 10 major centers
-<br>v. Water Treatment Plants:
- <br> Capacity: 500 million liters/day
- <br> Coverage: 100% of the city
- <br> Water recycling and reuse for the city
- <br> Storm water reuse: 20% of treated water
-<br>vi. Rainwater Harvesting and Wastewater Recycling:
- <br> Rainwater Harvesting: 100,000 residential and commercial buildings
- <br> Capacity: 300 million liters/day of water
- <br> Reused for irrigation: 70% in parks and landscaping.
-<br>vii. No Engine Zone:
- <br> Area: 20 kms
- <br> Can be used by cyclists, pedestrians, and cart owners (horse, bullock cart, etc.)
- <br> Improves air quality and reduces noise pollution.
-<br>viii. Solar Power Usage:
- <br> 50,000 Rooftop solar panels, lowering the energy level (bills)
- <br> 20 Traffic signals reducing dependence on electricity (pedestrian control signals)
- <br> 10 Solar pumps which can be used for agricultural irrigation, reduces the need for fuel-powered water pumps.
-<br>ix. Waste production and consumption
- <br> Post production 4 tons/day used for landscaping, agriculture
+    <p>
+        Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
+    </p>
 
+    <h2>Location and Population</h2>
+    <p>
+        <strong>State:</strong> Karnataka<br>
+        <strong>District:</strong> Chamrajnagar<br>
+        <strong>Taluk:</strong> Gundlupet<br>
+        <strong>Area:</strong> 15.60 sq. km<br>
+        <strong>Scale:</strong> 1 cm on chart = 2 km (x = 1.2 cm, y = 1.4 cm)<br>
+        <strong>PIN Code:</strong> 571419<br>
+        <strong>STD Code:</strong> 0822<br>
+        <strong>Time Zone:</strong> IST (Indian Standard Time) UTC+5:30<br>
+        <strong>Nearby Cities:</strong> Gundlupet (47 km), Kollegal (112 km), Chamrajnagar (134 km)<br>
+        <strong>Population:</strong><br>
+        Phase 1 (2025-2030): 300,000 residents (Primarily government and industrial workers)<br>
+        Phase 2 (2030-2035): 600,000 residents (Expansion of residential zones)<br>
+        Phase 3 (2035-2040): 1 million residents (Target population)
+    </p>
+
+    <h2>Budget</h2>
+    <h3>Phase 1 (2025-2030)</h3>
+    <ul>
+        <li>Infrastructure Development: ₹10,000 crores</li>
+        <li>Public Transportation: ₹6,000 crores (Metro, EV buses)</li>
+        <li>Affordable Housing: ₹5,000 crores (50,000 units for lower-income groups)</li>
+        <li>Smart Technology Implementation: ₹5,000 crores (IoT, AI for governance)</li>
+        <li>Green Energy and Water Conservation: ₹3,000 crores</li>
+        <li>Government Services and Administration: ₹2,000 crores</li>
+        <li>Education and Healthcare Initiatives: ₹3,000 crores</li>
+    </ul>
+
+    <h3>Phase 2 (2030-2035)</h3>
+    <ul>
+        <li>Growth and Expansion: ₹10,000 crores</li>
+        <li>Expansion of Transport: ₹8,000 crores (Metro extensions)</li>
+        <li>Residential Expansion: ₹5,000 crores</li>
+        <li>Green Energy Development: ₹7,000 crores (wind and solar farms)</li>
+        <li>Commercial & Industrial Zone Development: ₹5,000 crores</li>
+        <li>Tourism & Cultural Infrastructure Development: ₹4,000 crores</li>
+        <li>Smart Public Services Integration: ₹2,000 crores</li>
+        <li>Eco-friendly Waste Management: ₹1,000 crores</li>
+    </ul>
+
+    <h3>Phase 3 (2035-2040)</h3>
+    <ul>
+        <li>Mature Phase: ₹18,000 crores</li>
+        <li>Upgradation of Public Infrastructure: ₹8,000 crores</li>
+        <li>Sustainable Water System: ₹4,000 crores</li>
+        <li>Urban Development of Green Spaces: ₹1,000 crores</li>
+        <li>Public Health and Education Services Expansion: ₹3,000 crores</li>
+    </ul>
+
+    <h2>Government Initiatives</h2>
+    <ul>
+        <li><strong>Smart Cities Mission:</strong> Digital infrastructure, e-governance, and city surveillance. Grants: ₹3,000 crores</li>
+        <li><strong>Beti Bachao Beti Padhao:</strong> Support for girl children in below poverty line families. Health insurance: Up to ₹25,000/year. Annual scholarship: ₹500-₹1,000 (up to 10th standard)</li>
+        <li><strong>National Solar Mission:</strong> Renewable energy production. Funds: ₹1,000 crores for solar farms and sustainable energy</li>
+        <li><strong>Nali-Kali Programme:</strong> Redesigned elementary education to improve writing and learning outcomes</li>
+    </ul>
+
+    <h2>City Layout Plan</h2>
+    <ul>
+        <li><strong>Total Area:</strong> 1,500 sq. km</li>
+        <li><strong>Zones:</strong>
+            <ul>
+                <li>Residential Zone: Population: 1 million. Housing Density: 1,000-2,000 people per sq. km</li>
+                <li>Commercial and Business Zone: Area: 225 sq. km. Industries: IT services, eco-friendly product manufacturing</li>
+                <li>Education and Healthcare Zone: Area: 45 sq. km. Facilities: Schools, universities, research centers, hospitals</li>
+                <li>Industrial Zone: Area: 300 sq. km. Focus: Renewable energy, electric vehicles</li>
+                <li>Recreation and Cultural Zone: Area: 50 sq. km. Facilities: Museums, monuments, cultural centers</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>Revenue Generation</h2>
+    <ul>
+        <li>Property taxes and development fees: ₹3,000 crores annually</li>
+        <li>Tourism revenue: ₹1,000 crores annually</li>
+        <li>Commercial leasing: ₹3,500 crores annually</li>
+        <li>Public transport and utility services: ₹1,500 crores annually</li>
+        <li>Renewable energy export: ₹1,200 crores annually</li>
+    </ul>
+
+    <h2>Sustainability and Smart Elements</h2>
+    <ul>
+        <li>Renewable Energy: Solar and wind power meet 10% of city energy needs</li>
+        <li>Green Buildings: Energy-efficient and environmentally friendly designs</li>
+        <li>Green Spaces: Enhancing biodiversity and air quality</li>
+        <li>Smart Transportation: Electric buses, integrated public transport, cycling infrastructure</li>
+        <li>Smart Waste Management: Waste segregation, recycling, and composting</li>
+        <li>Digital Infrastructure: City-wide WiFi, e-governance platforms</li>
+        <li>Women's Help Center: Support for safety, health, and education</li>
+    </ul>
 </section>
+
     
 
 <!-- City Map Section -->
