--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
     </p>
 
-    <h2>Location and Population</h2>
+    <br><h2>Location and Population</h2>
     <p>
         <strong>State:</strong> Karnataka<br>
         <strong>District:</strong> Chamrajnagar<br>
