--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
     <h2>City Map</h2>
     <p>[Brief description of the city layout or purpose of the map].</p>
     <div style="margin-bottom: 1.5rem;">
-        <img src="[Map Image URL]" alt="[City Map Placeholder]" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
-    </div>
+            <img src="https://ibb.co/5svRW2K" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+        </div>
 </section>
 
 <!-- Team Members Section -->
