--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <!-- Buttons to show more info -->
 <br><button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button><br>
 <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button><br>
-<button class="button" onclick="toggleInfo('about-section')">More Info</button><br>
 
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
@@ -71,6 +70,7 @@
                 <td>[Team Member Name]</td>
                 <td>[Related tools or algorithms].</td>
             </tr>
+            <!-- Add more rows as needed -->
         </tbody>
     </table>
 </section>
@@ -82,53 +82,138 @@
         <dt><strong>Class:</strong></dt>
         <dd>D Division</dd>
         <dt><strong>Subject:</strong></dt>
-        <dd>Design and Analysis of Algorithm</dd>
+        <dd>Design and anylasis of Algorithm</dd>
         <dt><strong>Mentor:</strong></dt>
         <dd>Arundati Mam</dd>
     </dl>
 </section>
 
-<!-- About Section Wrapped in More Info -->
+
+<section id="city-plan">
+    <h1>About VAYUJIVA</h1>
+    <p>
+        Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
+    </p>
+<button class="button" onclick="toggleInfo('about-section')">More Info</button><br>
+    <!-- About Section Wrapped in More Info -->
 <div id="about-section" style="display: none;">
     <section id="city-plan">
-        <h1>About VAYUJIVA</h1>
-        <p>
-            Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
-        </p>
 
-        <h2>Location and Population</h2>
-        <p>
-            <strong>State:</strong> Karnataka<br>
-            <strong>District:</strong> Chamrajnagar<br>
-            <strong>Taluk:</strong> Gundlupet<br>
-            <strong>Area:</strong> 15.60 sq. km<br>
-            <strong>Scale:</strong> 1 cm on chart = 2 km (x = 1.2 cm, y = 1.4 cm)<br>
-            <strong>PIN Code:</strong> 571419<br>
-            <strong>STD Code:</strong> 0822<br>
-            <strong>Time Zone:</strong> IST (Indian Standard Time) UTC+5:30<br>
-            <strong>Nearby Cities:</strong> Gundlupet (47 km), Kollegal (112 km), Chamrajnagar (134 km)<br>
-            <strong>Population:</strong><br>
-            Phase 1 (2025-2030): 300,000 residents (Primarily government and industrial workers)<br>
-            Phase 2 (2030-2035): 600,000 residents (Expansion of residential zones)<br>
-            Phase 3 (2035-2040): 1 million residents (Target population)
-        </p>
+    <br><h2>Location and Population</h2>
+    <p>
+        <strong>State:</strong> Karnataka<br>
+        <strong>District:</strong> Chamrajnagar<br>
+        <strong>Taluk:</strong> Gundlupet<br>
+        <strong>Area:</strong> 15.60 sq. km<br>
+        <strong>Scale:</strong> 1 cm on chart = 2 km (x = 1.2 cm, y = 1.4 cm)<br>
+        <strong>PIN Code:</strong> 571419<br>
+        <strong>STD Code:</strong> 0822<br>
+        <strong>Time Zone:</strong> IST (Indian Standard Time) UTC+5:30<br>
+        <strong>Nearby Cities:</strong> Gundlupet (47 km), Kollegal (112 km), Chamrajnagar (134 km)<br>
+        <strong>Population:</strong><br>
+        Phase 1 (2025-2030): 300,000 residents (Primarily government and industrial workers)<br>
+        Phase 2 (2030-2035): 600,000 residents (Expansion of residential zones)<br>
+        Phase 3 (2035-2040): 1 million residents (Target population)
+    </p>
 
-        <h2>Budget</h2>
-        <!-- Budget details -->
+    <h2>Budget</h2>
+    <h3>Phase 1 (2025-2030)</h3>
+    <ul>
+        <li>Infrastructure Development: ₹10,000 crores</li>
+        <li>Public Transportation: ₹6,000 crores (Metro, EV buses)</li>
+        <li>Affordable Housing: ₹5,000 crores (50,000 units for lower-income groups)</li>
+        <li>Smart Technology Implementation: ₹5,000 crores (IoT, AI for governance)</li>
+        <li>Green Energy and Water Conservation: ₹3,000 crores</li>
+        <li>Government Services and Administration: ₹2,000 crores</li>
+        <li>Education and Healthcare Initiatives: ₹3,000 crores</li>
+    </ul>
 
-        <h2>Government Initiatives</h2>
-        <!-- Initiatives details -->
+    <h3>Phase 2 (2030-2035)</h3>
+    <ul>
+        <li>Growth and Expansion: ₹10,000 crores</li>
+        <li>Expansion of Transport: ₹8,000 crores (Metro extensions)</li>
+        <li>Residential Expansion: ₹5,000 crores</li>
+        <li>Green Energy Development: ₹7,000 crores (wind and solar farms)</li>
+        <li>Commercial & Industrial Zone Development: ₹5,000 crores</li>
+        <li>Tourism & Cultural Infrastructure Development: ₹4,000 crores</li>
+        <li>Smart Public Services Integration: ₹2,000 crores</li>
+        <li>Eco-friendly Waste Management: ₹1,000 crores</li>
+    </ul>
 
-        <h2>City Layout Plan</h2>
-        <!-- Layout details -->
+    <h3>Phase 3 (2035-2040)</h3>
+    <ul>
+        <li>Mature Phase: ₹18,000 crores</li>
+        <li>Upgradation of Public Infrastructure: ₹8,000 crores</li>
+        <li>Sustainable Water System: ₹4,000 crores</li>
+        <li>Urban Development of Green Spaces: ₹1,000 crores</li>
+        <li>Public Health and Education Services Expansion: ₹3,000 crores</li>
+    </ul>
 
-        <h2>Revenue Generation</h2>
-        <!-- Revenue details -->
+    <h2>Government Initiatives</h2>
+    <ul>
+        <li><strong>Smart Cities Mission:</strong> Digital infrastructure, e-governance, and city surveillance. Grants: ₹3,000 crores</li>
+        <li><strong>Beti Bachao Beti Padhao:</strong> Support for girl children in below poverty line families. Health insurance: Up to ₹25,000/year. Annual scholarship: ₹500-₹1,000 (up to 10th standard)</li>
+        <li><strong>National Solar Mission:</strong> Renewable energy production. Funds: ₹1,000 crores for solar farms and sustainable energy</li>
+        <li><strong>Nali-Kali Programme:</strong> Redesigned elementary education to improve writing and learning outcomes</li>
+    </ul>
 
-        <h2>Sustainability and Smart Elements</h2>
-        <!-- Sustainability details -->
-    </section>
-</div>
+    <h2>City Layout Plan</h2>
+    <ul>
+        <li><strong>Total Area:</strong> 1,500 sq. km</li>
+        <li><strong>Zones:</strong>
+            <ul>
+                <li>Residential Zone: Population: 1 million. Housing Density: 1,000-2,000 people per sq. km</li>
+                <li>Commercial and Business Zone: Area: 225 sq. km. Industries: IT services, eco-friendly product manufacturing</li>
+                <li>Education and Healthcare Zone: Area: 45 sq. km. Facilities: Schools, universities, research centers, hospitals</li>
+                <li>Industrial Zone: Area: 300 sq. km. Focus: Renewable energy, electric vehicles</li>
+                <li>Recreation and Cultural Zone: Area: 50 sq. km. Facilities: Museums, monuments, cultural centers</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>Revenue Generation</h2>
+    <ul>
+        <li>Property taxes and development fees: ₹3,000 crores annually</li>
+        <li>Tourism revenue: ₹1,000 crores annually</li>
+        <li>Commercial leasing: ₹3,500 crores annually</li>
+        <li>Public transport and utility services: ₹1,500 crores annually</li>
+        <li>Renewable energy export: ₹1,200 crores annually</li>
+    </ul>
+
+    <h2>Sustainability and Smart Elements</h2>
+    <ul>
+        <li>Renewable Energy: Solar and wind power meet 10% of city energy needs</li>
+        <li>Green Buildings: Energy-efficient and environmentally friendly designs</li>
+        <li>Green Spaces: Enhancing biodiversity and air quality</li>
+        <li>Smart Transportation: Electric buses, integrated public transport, cycling infrastructure</li>
+        <li>Smart Waste Management: Waste segregation, recycling, and composting</li>
+        <li>Digital Infrastructure: City-wide WiFi, e-governance platforms</li>
+        <li>Women's Help Center: Support for safety, health, and education</li>
+    </ul>
+</section>
+
+    
+
+<!-- City Map Section -->
+<section id="city-map">
+    <h2>City Map</h2>
+    <p>[Brief description of the city layout or purpose of the map].</p>
+    <div style="margin-bottom: 1.5rem;">
+        <img src="[Map Image URL]" alt="[City Map Placeholder]" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+    </div>
+</section>
+
+<!-- Team Members Section -->
+<section>
+    <h2>Team Members</h2>
+    <ul>
+        <li>Rio Javalagi</li>
+        <li>Sanjana Shetti</li>
+        <li>[Team Member Name 3]</li>
+        <li>[Team Member Name 4]</li>
+        <!-- Add more team members if required -->
+    </ul>
+</section>
 
 <footer>
     <p>&copy; 2024 [City Name] | Designed by RIA JAVALAGI</p>
