--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     <p>
         Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.
     </p>
+    <br>
+    <br>
 <button class="button" onclick="toggleInfo('about-section')">More Info</button><br>
     <!-- About Section Wrapped in More Info -->
 <div id="about-section" style="display: none;">
@@ -199,18 +201,18 @@
     <h2>City Map</h2>
     <p>[Brief description of the city layout or purpose of the map].</p>
     <div style="margin-bottom: 1.5rem;">
-        <img src="[Map Image URL]" alt="[City Map Placeholder]" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
-    </div>
+            <img src="https://ibb.co/5svRW2K" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+        </div>
 </section>
 
 <!-- Team Members Section -->
 <section>
     <h2>Team Members</h2>
     <ul>
-        <li>Rio Javalagi</li>
-        <li>Sanjana Shetti</li>
-        <li>[Team Member Name 3]</li>
-        <li>[Team Member Name 4]</li>
+        <li>Ria Javalagi 01fe23bcs060</li>
+        <li>Sanjana Shetti 01fe23bcs057 </li>
+        <li>Chinmayi K.B 01fe23bcs080</li>
+        <li>Ananya Pattanashetty 01fe23bcs055</li>
         <!-- Add more team members if required -->
     </ul>
 </section>
