--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     
 
 <!-- City Map Section -->
-<section id="city-map">
+<section>
     <h2>City Map</h2>
     <p>[Brief description of the city layout or purpose of the map].</p>
     <div style="margin-bottom: 1.5rem;">
